tests/errors/substructural/check/drop_of_out_ref.sim

        fn f(r: &out i64) {
            entry:
            drop r;
            return
        }
        